tests/valid/StaticVar_Valid_4.whiley
type nat is (int x) where x >= 0

final nat x = 1

public export method test():
    assume x == 1
