tests/invalid/Template_Invalid_3.whiley
type nat<T,T> is (int x) where x >= 0